modify: agrega boton revelar

--- a/juego.html
+++ b/juego.html
@@ -62,8 +62,14 @@
                     <h5>es</h5>
                     <h4 id="lbNombre"></h4>
                 </div>
+
+                <div style="display: none;" id="revelar" class="div-correcto">
+                    <h5>¡Suerte para la pr&oacute;xima!</h5>
+                    <h5>era</h5>
+                    <h4 id="lbRevela"></h4>
+                </div>
                 
-                <p style="display: none;" id="erroneo" class="err">Lo siento, respuesta incorrecta, intenta de nuevo.</p>
+                <p style="display: none;" id="erroneo" class="err">Lo siento, respuesta incorrecta, intenta de nuevo. <button onclick="revelarRespuesta()" class="btn">Me rindo</button></p>
                 <p class="err" id="msgIn" style="display: none;">Ingresa información!</p>
                 </div>
             </div>
